kubernetes/deploy-mike-admission-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mike-admission-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mike-admission-controller
  template:
    metadata:
      labels:
        app: mike-admission-controller
      name: mike-admission-controller
    spec:
     containers:
      - image: michaelbraunbass/mike-admission-controller:main
        name: mike-admission-controller
        imagePullPolicy: Always
        ports:
        - containerPort: 8118
---
apiVersion: v1
kind: Service
metadata:
  name: mike-admission-controller
spec:
  ports:
  - port: 443
    protocol: TCP
    targetPort: 8118
  selector:
    app: mike-admission-controller
