kubernetes/register-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: mike-admission-controller
webhooks:
- name: mike-admission-controller.mike-admission-controller.svc
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["pods"]
    scope:       "Namespaced"
  clientConfig:
    service:
      namespace: mike-admission-controller
      name: mike-admission-controller
      path: "/"
    # cat ca.crt | base64  
    caBundle: |
      LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMxakNDQWI0Q0NRQ2lvUk96RXFMNE5qQU5CZ2txaGtpRzl3MEJBUXNGQURBc01Tb3dLQVlEVlFRRERDRk4KYVd0bElFRmtiV2x6YzJsdmJpQkRiMjUwY205c2JHVnlJRmRsWW1odmIyc3dJQmNOTWpNd05qRTBNakEwT1RJMApXaGdQTWpFeU16QTFNakV5TURRNU1qUmFNQ3d4S2pBb0JnTlZCQU1NSVUxcGEyVWdRV1J0YVhOemFXOXVJRU52CmJuUnliMnhzWlhJZ1YyVmlhRzl2YXpDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUIKQU1PR21Oa3lma1hzSS9PajVVQjlwWHYrc1BTZGJmTFA2VVZLdkN3Z2pnUTk4K0ZLU2puMldsTU5WYVh1YWJjZApEcVNPVmlKVkhqRUxiZWE4ZV [...]
  admissionReviewVersions: ["v1"]
  sideEffects: None
